--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -4144,6 +4144,143 @@
             </objects>
             <point key="canvasLocation" x="2313.8461538461538" y="4736.7298578199052"/>
         </scene>
+        <!--Create Diapazon View Controller-->
+        <scene sceneID="FXS-wV-VZC">
+            <objects>
+                <viewController storyboardIdentifier="CreateDiapazonVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hRg-0b-uRE" customClass="CreateDiapazonViewController" customModule="SadAgregator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4O4-1M-rVW">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qxa-n9-hSB">
+                                <rect key="frame" x="16" y="76" width="358" height="34"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="От" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SgA-58-Yhd">
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="До" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p7R-gg-yFh">
+                                        <rect key="frame" x="183" y="0.0" width="175" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Тип наценки" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jSL-Hq-oGd">
+                                <rect key="frame" x="15.999999999999993" y="125.99999999999999" width="100.33333333333331" height="20.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="qSx-96-FLw">
+                                <rect key="frame" x="16" y="162.33333333333334" width="358" height="35"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hoJ-lk-hir">
+                                        <rect key="frame" x="0.0" y="0.0" width="170.66666666666666" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="6ZM-oM-6dS"/>
+                                        </constraints>
+                                        <state key="normal" title="В рублях"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzo-SP-ddM">
+                                        <rect key="frame" x="187.66666666666663" y="0.0" width="170.33333333333337" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="vr3-Jk-IlE"/>
+                                        </constraints>
+                                        <state key="normal" title="В процентах"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Наценка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2S4-84-a4M">
+                                <rect key="frame" x="16" y="213.33333333333334" width="175" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Фикс. надбавка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLq-ez-tf7">
+                                <rect key="frame" x="199" y="213.33333333333334" width="175" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aad-8H-Qyn">
+                                <rect key="frame" x="172" y="401.66666666666669" width="82" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="1tc-uf-lCa"/>
+                                    <constraint firstAttribute="width" constant="82" id="PuS-Yr-7rp"/>
+                                </constraints>
+                                <state key="normal" title="Отмена">
+                                    <color key="titleColor" name="blackwhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PqT-AK-aMC">
+                                <rect key="frame" x="270" y="401.66666666666669" width="104" height="40"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="0Q4-mS-UWf"/>
+                                    <constraint firstAttribute="width" constant="104" id="0or-Rh-DTM"/>
+                                </constraints>
+                                <state key="normal" title="Создать">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Округление" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JRm-UI-daw">
+                                <rect key="frame" x="16" y="263.33333333333331" width="95.333333333333329" height="20.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ifQ-VL-dUd">
+                                <rect key="frame" x="16" y="299.66666666666669" width="140" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="j1c-ca-uQf"/>
+                                    <constraint firstAttribute="height" constant="70" id="y5z-Ot-49a"/>
+                                </constraints>
+                            </pickerView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ley-GR-VVm"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="jLq-ez-tf7" secondAttribute="trailing" constant="16" id="4fQ-GW-TfF"/>
+                            <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="PqT-AK-aMC" secondAttribute="trailing" constant="16" id="4sJ-b1-XFU"/>
+                            <constraint firstItem="jSL-Hq-oGd" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="7b9-3B-Fn1"/>
+                            <constraint firstItem="2S4-84-a4M" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="CGN-sU-4fm"/>
+                            <constraint firstItem="PqT-AK-aMC" firstAttribute="leading" secondItem="aad-8H-Qyn" secondAttribute="trailing" constant="16" id="CNJ-Na-BVi"/>
+                            <constraint firstItem="2S4-84-a4M" firstAttribute="top" secondItem="qSx-96-FLw" secondAttribute="bottom" constant="16" id="Fcv-pF-7bf"/>
+                            <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="Qxa-n9-hSB" secondAttribute="trailing" constant="16" id="Jc4-z2-6OX"/>
+                            <constraint firstItem="PqT-AK-aMC" firstAttribute="top" secondItem="jLq-ez-tf7" secondAttribute="bottom" constant="154.33000000000001" id="Pp1-eq-keY"/>
+                            <constraint firstItem="jLq-ez-tf7" firstAttribute="leading" secondItem="2S4-84-a4M" secondAttribute="trailing" constant="8" id="PrD-Re-p9R"/>
+                            <constraint firstItem="jSL-Hq-oGd" firstAttribute="top" secondItem="Qxa-n9-hSB" secondAttribute="bottom" constant="16" id="R21-n9-NDp"/>
+                            <constraint firstItem="JRm-UI-daw" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="SwU-gS-lNy"/>
+                            <constraint firstItem="JRm-UI-daw" firstAttribute="top" secondItem="2S4-84-a4M" secondAttribute="bottom" constant="16" id="aSI-Fe-loG"/>
+                            <constraint firstItem="ifQ-VL-dUd" firstAttribute="top" secondItem="JRm-UI-daw" secondAttribute="bottom" constant="16" id="bvf-Q0-hfQ"/>
+                            <constraint firstItem="aad-8H-Qyn" firstAttribute="centerY" secondItem="PqT-AK-aMC" secondAttribute="centerY" id="hdg-xJ-KU5"/>
+                            <constraint firstItem="Qxa-n9-hSB" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="htU-xR-Y4p"/>
+                            <constraint firstItem="Qxa-n9-hSB" firstAttribute="top" secondItem="Ley-GR-VVm" secondAttribute="top" constant="32" id="ofD-Zx-0lM"/>
+                            <constraint firstItem="qSx-96-FLw" firstAttribute="top" secondItem="jSL-Hq-oGd" secondAttribute="bottom" constant="16" id="r6f-wo-w3n"/>
+                            <constraint firstItem="ifQ-VL-dUd" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="seh-hq-rkh"/>
+                            <constraint firstItem="2S4-84-a4M" firstAttribute="trailing" secondItem="SgA-58-Yhd" secondAttribute="trailing" id="tMc-Hi-2yJ"/>
+                            <constraint firstItem="jLq-ez-tf7" firstAttribute="top" secondItem="qSx-96-FLw" secondAttribute="bottom" constant="16" id="wOz-nL-Zvb"/>
+                            <constraint firstItem="qSx-96-FLw" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="xL0-qb-KRf"/>
+                            <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="qSx-96-FLw" secondAttribute="trailing" constant="16" id="zgB-ND-QXU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="createButton" destination="PqT-AK-aMC" id="vlB-95-qwP"/>
+                        <outlet property="doTextField" destination="p7R-gg-yFh" id="9EU-qs-gZX"/>
+                        <outlet property="fixNadbavkaTextField" destination="jLq-ez-tf7" id="VQX-0b-lq7"/>
+                        <outlet property="inPercentsButton" destination="wzo-SP-ddM" id="biO-7J-Wxc"/>
+                        <outlet property="inRublesButton" destination="hoJ-lk-hir" id="N7e-h9-DUf"/>
+                        <outlet property="nacenkaTextField" destination="2S4-84-a4M" id="LrX-DA-svA"/>
+                        <outlet property="otTextField" destination="SgA-58-Yhd" id="UCe-Jj-fKv"/>
+                        <outlet property="otmenaButton" destination="aad-8H-Qyn" id="yKH-4C-Jt6"/>
+                        <outlet property="picker" destination="ifQ-VL-dUd" id="V0j-Ln-Drj"/>
+                        <outlet property="sozdatButton" destination="PqT-AK-aMC" id="heC-dS-IX7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yUG-Fp-2G0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2313.8461538461538" y="5420.6161137440758"/>
+        </scene>
         <!--Date Picker View Controller-->
         <scene sceneID="z4a-Je-IOi">
             <objects>
