--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -4610,10 +4610,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akQ-AG-Yc0">
-                                                    <rect key="frame" x="82.666666666666686" y="8" width="174" height="53"/>
+                                                    <rect key="frame" x="72.666666666666686" y="8" width="194" height="53"/>
                                                     <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="174" id="Fx9-rO-CXz"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="194" id="Fx9-rO-CXz"/>
                                                         <constraint firstAttribute="height" constant="45" id="RAE-6k-efd"/>
                                                     </constraints>
                                                     <state key="normal" title="Показать операции">
